# agentflow-runtime

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HITL-CHECKLIST.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  demo-approved-repair-materialize.ts  demo-code-change-plan-execution-approval.ts  demo-code-change-plan-execution-dry-run.ts  demo-code-change-plan-execution.ts  demo-code-test-repair-review.ts  demo-e2e-real-project.ts  demo-external-project-import.ts  demo-feasibility.ts  demo-scope-confirmation.ts  demo-task-negotiation.ts  demo.py  demo.ts  opencode.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.opencode/: README.md
agents/: __init__.py  summary.py  supervisor.py  web_research.py
ai-daily/: .env.example  README.md  app.js  data.js  index.html  sources.json  styles.css
cli/: args.ts  create-template.ts  execution-list.ts  execution-rollback-guide.ts  execution-show.ts  external-project-run.ts  inspect-template.ts  list-roles.ts  list-templates.ts  llm-config.ts  llm-smoke.ts  native-subagent-collect.ts  native-subagent-pack.ts  opencode-subagents.ts  opencode-workflow-command.ts  patch-apply-guide.ts  patch-list.ts  patch-show.ts  patch-verify.ts  policy-approve.ts  policy-audit.ts  policy-pending.ts  policy-reject.ts  policy-replay-check.ts  policy-replay-history.ts  policy-replay.ts  project-memory-autonomy.ts  project-memory-compact.ts  project-memory-list.ts  project-memory-show.ts  project-memory-summary.ts  run-profile-workflow.ts  run-workflow.ts  scope-gate.ts  (+10 more)
(+336 files in other folders)
